--- a/index.html
+++ b/index.html
@@ -1,11 +1,378 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Julia Portfolio</title>
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fff;
+      color: #222;
+      display: flex;
+    }
+
+    .sidebar {
+      width: 220px;
+      padding: 20px;
+      border-right: 1px solid #ddd;
+      background: #fff;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+    }
+    .sidebar h1 {
+      margin: 0 0 20px;
+      font-size: 24px;
+    }
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+    .sidebar ul li {
+      margin: 10px 0;
+    }
+    .sidebar ul li a {
+      text-decoration: none;
+      color: #000;
+      font-size: 14px;
+    }
+    .sidebar p {
+      font-size: 12px;
+      margin-top: 40px;
+    }
+
+    .main {
+      margin-left: 240px;
+      padding: 40px;
+      flex: 1;
+    }
+
+    .hero {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      margin-bottom: 60px;
+    }
+    .hero img {
+      width: 220px;
+      border-radius: 20px;
+      padding: 10px;
+    }
+    .hero h2 {
+      font-size: 50px;
+      margin: 0;
+      line-height: 1.1;
+    }
+    .hero p {
+      font-size: 14px;
+      color: gray;
+      margin: 0 0 10px;
+    }
+
+    .skills {
+      display: flex;
+      gap: 40px;
+      margin-bottom: 30px;
+    }
+    .skill {
+      width: 200px;
+    }
+    .skill h3 {
+      margin: 0;
+      font-size: 16px;
+    }
+    .skill p {
+      font-size: 12px;
+      color: gray;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #222;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      font-size: 14px;
+      margin-bottom: 40px;
+      cursor: pointer;
+    }
+
+    #toggleWorks {
+      display: none;
+    }
+    .portfolio {
+      display: none;
+      margin-bottom: 60px;
+    }
+    #toggleWorks:checked + .portfolio {
+      display: block;
+    }
+    .portfolio h2 {
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+    .portfolio-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+    }
+    .portfolio-grid div {
+      background: #eee;
+      height: 150px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      color: #666;
+    }
+
+    .edu-exp {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 100px;
+    }
+    .edu-exp div {
+      width: 45%;
+    }
+    .edu-exp h2 {
+      font-size: 30px;
+      color: #666;
+    }
+
+    table {
+      width: 100%;
+      margin-top: 40px;
+      border-collapse: collapse;
+    }
+    td, th {
+      padding: 10px;
+      vertical-align: top;
+      text-align: left;
+      padding: 40px;
+      margin-left: 40px;
+      margin-bottom: 300%;
+      gap: 40px;
+    }
+    .skill-bar {
+      background: #eee;
+      height: 6px;
+      border-radius: 4px;
+      margin-top: 5px;
+      margin-bottom: 30px;
+    }
+    .fill {
+      background: red;
+      height: 100%;
+      border-radius: 4px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 12px;
+      color: #888;
+      border-top: 1px solid #ddd;
+    }
+
+    /* Sidebar dropdown (Pages) */
+    .id {
+      display: inline-block;
+      color: #000000;
+      text-decoration: none;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    #bit { display: none; }
+    .ped { display: none; font-size: 10px; }
+    #bit:checked + .ped { display: block; }
+    .POL {
+      background: #eee;
+      height: 150px;
+      font-size: 14px;
+      color: #666;
+    }
+
+    table{
+      margin-bottom: 60px;
+    }
+    .ki{ 
+  display: flex;
+  flex-direction: column; 
+      align-items: center;
+    }
+
+    .hi{
+      font-size: 50px;
+    }
+    .ju{
+      margin-top: 1000%;
+    }
+    a:hover a:focus{
+      color: black;
+    }
+    h6{
+      margin-bottom: 30px;
+    }
+    tr{
+
+  </style>
 </head>
 <body>
-    
+  <div class="sidebar">
+    <h1>Julia.</h1>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Experience</a></li>
+      <li><a href="#">Works</a></li>
+      <li><a href="#">Contact</a></li>
+
+      <li><label for="bit" class="id"><h2>Pages</h2></label></li>
+      <input type="checkbox" id="bit">
+      <div class="ped">
+        <h3>Our Pages</h3>
+        <div class="POL">
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">Single Post</a></div>
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">Single Portfolio</a></div>
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">Contact</a></div>
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">My Team</a></div>
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">Blog</a></div>
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">Portfolio Masonry</a></div>
+          <div><a href="https://templatesjungle.com/demo/?url=https://demo.templatesjungle.com/julia/&purl=https://templatesjungle.gumroad.com/l/julia-onepage-portfolio">Styles</a></div>
+        </div>
+      </div>
+
+      <li><a href="#"><b>Get PRO</b></a></li>
+    </ul>
+    <p class="ju">contact@yoursite.com</p>
+  </div>
+
+  <div class="main">
+        <div class="hero">
+      <img src="assets/images/ava.png" width="300" height="300" alt="Julia">
+      <div>
+        <p>DESIGNER / DEVELOPER</p>
+        <h2>Julia<br>Stiles</h2>
+      </div>
+    </div>
+
+
+    <div class="skills">
+      <div class="skill">
+        <h3>01 UI/UX Design</h3>
+        <p>At in proin consequat ut cursus venenatis sapien.</p>
+      </div>
+      <div class="skill">
+        <h3>02 Illustration</h3>
+        <p>At in proin consequat ut cursus venenatis sapien.</p>
+      </div>
+      <div class="skill">
+        <h3>03 Graphic Design</h3>
+        <p>At in proin consequat ut cursus venenatis sapien.</p>
+      </div>
+    </div>
+
+    <label for="toggleWorks" class="btn">VIEW ALL WORK</label>
+    <input type="checkbox" id="toggleWorks">
+    <div class="portfolio">
+      <h2>My Works</h2>
+      <div class="portfolio-grid">
+        <div><img src="assets/images/i.jpg" alt="work1"></div>
+        <div><img src="assets/images/port-item2.jpg" alt="work2"></div>
+        <div><img src="assets/images/port-item3.jpg" alt="work3"></div>
+      </div>
+    </div>
+
+    <div class="edu-exp">
+      <div>
+        <h2><strong>Education</strong></h2>
+        <h6>1998 - 2004</h6>
+        <h3> <strong>Bachelors in Engineering in Information Technology</strong></h3>
+        <h6 class="di">Harvard School of Science and management</h6>
+
+        <h6>2004 - 2006</h6>
+        <h3><strong>Masters in Data Analysis</strong></h3>
+        <h6 class="do">Harvard School of Science and management</h6>
+
+        <h2><strong><strong>Interests</strong></strong></h2>
+        <h6>2007 - 2012</h6>
+        <h3><strong>Bachelors in Engineering in Information Technology</strong></h3>
+        <h6 class="di">Harvard School of Science and management</h6>
+        <h6>2013 - present</h6>
+        <h3><strong>Studio Alpha.: Project Manager</strong></h3>
+        <h6>iacentem substantiales um se sed esse haec Possit facis qui a a a patriam.</h6>
+
+
+      </div>
+      <div>
+        <h2>Experiences</h2>
+        <h6>2007-2012</h6>
+        <h3><strong>Creative Agency Inc.: Design head</strong></h3>
+        <h6 class="do">iacentem substantiales um se sed esse haec Possit facis qui a a a patriam.</h6>
+        <h6>2013 - present</h6>
+        <h3><strong>Studio Alpha.: Project Manager</strong></h3>
+        <h6 class="di">iacentem substantiales um se sed esse haec Possit facis qui a a a patriam.</h6>
+        <h2><strong>References</strong></h2>
+        <h6>1998 - 2004</h6>
+        <h3><strong>Dr. Stephen H. King</strong></h3>
+        <h6 class="do">iacentem substantiales um se sed esse haec Possit facis qui a a a patriam.</h6>
+        <h6>2004 - 2006</h6>
+        <h3><strong>Dr. David Howard</strong></h3>
+        <h6>iacentem substantiales um se sed esse haec Possit facis qui a a a patriam.</h6>
+      </div>
+    </div>
+
+    <div>
+      <h6>introduction</h6>
+      <h1><strong>Experienced</strong></h1>
+      <h1><strong>Creative mind</strong></h1>
+      <h6>Labore accusam in modo compungi, iacentem substantiales um se sed esse haec.</h6>
+    </div>
+
+    <table>
+      <tr>
+        <td>
+          <p><b>Age:</b> 22</p>
+          <p><b>Residence:</b> United States</p>
+          <p><b>Address:</b> A City, Florida, 32104</p>
+          <p><b>E-mail:</b> hello@yourwebsite.com</p>
+          <p><b>Phone:</b> +2345 344 678 563</p>
+        </td>
+        <td>
+          <p>Adobe Photoshop <span style="float:right;">90%</span></p>
+          <div class="skill-bar"><div class="fill" style="width:90%"></div></div>
+
+          <p>Adobe Illustrator <span style="float:right;">75%</span></p>
+          <div class="skill-bar"><div class="fill" style="width:75%"></div></div>
+
+          <p>Figma <span style="float:right;">80%</span></p>
+          <div class="skill-bar"><div class="fill" style="width:80%"></div></div>
+
+          <p>Adobe After Effect <span style="float:right;">70%</span></p>
+          <div class="skill-bar"><div class="fill" style="width:70%"></div></div>
+
+          <p>Photography <span style="float:right;">95%</span></p>
+          <div class="skill-bar"><div class="fill" style="width:95%"></div></div>
+        </td>
+      </tr>
+    </table>
+    <div class="ki">
+      <h6>Personal Info</h6>
+      <h1 class="hi">Contact Me</h1>
+      <h6>Labore accusam in modo compungi, iacentem substantiales um se sed esse haec.</h6>
+    </div>
+
+    <footer>
+      © 2025 Julia Portfolio. Made with ❤️ for school project.
+    </footer>
+  </div>
 </body>
 </html>
